update findEmoCards ~ findEmoBackground

--- a/pages/delete.html
+++ b/pages/delete.html
@@ -162,6 +162,11 @@
                     btnAdd.click();
                 }
             })
+
+            let test = [{cards:[]}];
+            let card = {name:"happy", ID:1};
+            test[0].cards.push(card);
+            console.log(test[0].cards.length);
         </script>
     </body>
 </html>
