--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -174,10 +174,12 @@
             // 預設初始卡片數量為 0 張
             let cardsNum = 0;
             // 抓 localStorage 的 localStorage.getItem("addedCards"); 資料
+            let storageData;
             let storageCards;
             let getAddedCards = localStorage.getItem("addedCards");
             if(getAddedCards!=null){
-                storageCards=JSON.parse(getAddedCards); // 將 string 資料轉為 array 資料
+                storageData=JSON.parse(getAddedCards);
+                storageCards=storageData[0].cards;
 
                 axios.get("https://api.wavemocards.com/emotions?require=cards")
                 .then(function(response){
@@ -275,7 +277,6 @@
                     }
                     // 建立 初始卡片數量
                     cardsNum = storageCards.length;
-                    console.log(cardsNum);
                     // 監聽 x按鈕，被點擊後 刪除該卡（先跳出刪除確認視窗，再跳出刪除成功）
                     const btnDeletes = document.querySelectorAll('#btnDelete');
                     const cardBoxes = document.querySelectorAll('#cardBox');
@@ -288,9 +289,11 @@
                             modalDeleteSure.addEventListener("click", function(){
                                 storageCards.splice(i, 1);
                                 cardsNum = storageCards.length;
+                                // 存入 localStorage 中
+                                storageData[0].cards=storageCards;
                                 // 將資料 轉為 string 資料
-                                let stringAddedCard = JSON.stringify(storageCards);
-                                // 將 aryAddedCards 存入 localStorage 中
+                                let stringAddedCard = JSON.stringify(storageData);
+                                // 將資料存到 storageData 中
                                 localStorage.setItem("addedCards", stringAddedCard);
                                 // 完成資料處理，關閉Modal
                                 modalDeleteClose.click();
@@ -306,7 +309,7 @@
                     })
                     // 確認卡片張數是否 >0 <=3
                     btnNext.addEventListener("click", function(){
-                        console.log(cardsNum);
+                        console.log(storageData);
                         if( cardsNum==0 ){
                             modalNextErrTitle.textContent="卡片數量不足";
                             modalNextErrText1.classList.remove('d-none');
@@ -323,12 +326,13 @@
                             btnNext.click();
                         } else {
                             // 將資料 轉為 string 資料，並將 aryAddedCards 存入 localStorage 中
-                            let stringAddedCard = JSON.stringify(storageCards);
+                            let stringAddedCard = JSON.stringify(storageData);
                             localStorage.setItem("addedCards", stringAddedCard);
                             location.href = "findEmoStrength1st.html";
                         }
                     })
                 })
+            
             }
         </script>
     </body>
