--- a/findEmoAction.html
+++ b/findEmoAction.html
@@ -363,4 +363,13 @@
 <!-- axios -->
 <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>    <script type="text/javascript" src="../assets/js/textarea.js"></script>
   </body>
+  <script>
+    // 取得local storage 資料
+    let storageData;
+    let storageCards;
+    let getAddedCards = localStorage.getItem("addedCards");
+    storageData=JSON.parse(getAddedCards);
+    console.log(storageData);
+    storageCards=storageData[0].cards;
+  </script>
 </html>
