--- a/pages/signup.html
+++ b/pages/signup.html
@@ -312,8 +312,8 @@
                         <p id="modalResultText" class="fs-4 fw-bold">註冊成功</p>
                         <p id="modalResultText2" class="d-none mt-12 fs-7 text-gray-700"></p>
                         <p id="modalResultText3" class="d-none mt-12 fs-7 text-gray-700">
-                            若無法排除問題，請 
-                            <a class="link-pink" href="mailto:info@wavemocards.com">與我們聯繫</a>
+                            若無法排除問題，請來信 
+                            <a class="link-pink" href="mailto:info@wavemocards.com">與我們聯繫</a>。
                         </p>
                         <div style="width: 45%; height: 45%;">
                             <img class="w-100" src="https://wavemocards.com/frontend/upload/01-happy/happy05-excited.svg" alt="興奮" id="modalResultImg">
