--- a/signUp.html
+++ b/signUp.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-      <script type="module" crossorigin src="/wavemocards/assets/main-b56f0798.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-d39193d2.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-53ce6bfa.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-2af72cda.css">
     </head>
     <body>
         <header class="header sticky-top">
@@ -350,8 +350,8 @@
                         <p id="modalResultText" class="fs-4 fw-bold">註冊成功</p>
                         <p id="modalResultText2" class="d-none mt-12 fs-7 text-gray-700"></p>
                         <p id="modalResultText3" class="d-none mt-12 fs-7 text-gray-700">
-                            若無法排除問題，請 
-                            <a class="link-pink" href="mailto:info@wavemocards.com">與我們聯繫</a>
+                            若無法排除問題，請來信 
+                            <a class="link-pink" href="mailto:info@wavemocards.com">與我們聯繫</a>。
                         </p>
                         <div style="width: 45%; height: 45%;">
                             <img class="w-100" src="https://wavemocards.com/frontend/upload/01-happy/happy05-excited.svg" alt="興奮" id="modalResultImg">
